2011-01-21  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        Remove unnecessary <stdio.h> include
        https://bugs.webkit.org/show_bug.cgi?id=52884

        * jit/JIT.cpp: remove unnecessary include.

2011-01-20  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Maciej Stachowiak.

        Added OwnPtrCommon.h because OwnArrayPtr::set calls deleteOwnedPtr.

        * wtf/OwnArrayPtr.h:

2011-01-20  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Oliver Hunt.

        [WINCE] Remove obsolete JSVALUE32 code
        https://bugs.webkit.org/show_bug.cgi?id=52450

        Remove the "offset hack" in create_jit_stubs, since we
        only support JSVALUE32_64 in the meantime.

        * create_jit_stubs: Removed offset argument
        * jit/JITStubs.cpp:

2011-01-20  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        When marking conservatively, guard against reviving dead objects.
        https://bugs.webkit.org/show_bug.cgi?id=52840
        
        SunSpider and v8 say no change.

        * interpreter/RegisterFile.h:
        (JSC::RegisterFile::markCallFrames): Updated to use the ConservativeSet API.

        * runtime/Heap.cpp:
        (JSC::Heap::recordExtraCost): No need to guard against conservative
        marking reviving dead objects anymore, since the conservative marking
        mechanism guards against this now.

        (JSC::Heap::markConservatively):
        (JSC::Heap::markProtectedObjects):
        (JSC::Heap::markTempSortVectors): Don't drain the mark stack inside a
        marking function. We want to establish a separation of concerns between
        visiting roots and draining the mark stack.

        (JSC::Heap::markRoots): Gather the set of conservative references before
        clearning mark bits, because conservative marking now uses the mark bits
        to determine if a reference is valid, and avoid reviving dead objects.
